# six-birds-logic

./: .gitignore  Makefile  README.md  build_backend.py  pyproject.toml  setup.cfg
assets/: zenodo_related_works.csv
configs/: exp_gate_discovery.json  exp_gate_phase_diagram.json  exp_parity_robustness.json  exp_parity_vs_and.json  exp_reversible_vs_erased.json
experiments/: run_discovery_smoke.py  run_gate_discovery.py  run_gate_phase_diagram.py  run_parity_robustness.py  run_reversible_vs_erased.py  run_sweep.py  smoke_gate_labs.py
lean/LogicClosure/: LogicClosure.lean  Main.lean  README.md  lake-manifest.json  lakefile.toml
paper/: main.tex  refs.bib
paper/figures/: logic_layer_overview.tex
paper/notes/: citation_shortlist.md  claim_ledger.md  figure_table_inventory.md  final_checklist.md
paper/sections/: 00_frontmatter.tex  01_intro.tex  02_framework.tex  03_diagnostics_methods.tex  04_results_parity.tex  05_results_phase.tex  06_results_reversible.tex  07_results_discovery.tex  08_discussion.tex  09_appendix.tex
paper/tables/: gate_discovery.tex  partition_discovery.tex  (+1 more)
results/: final_manifest.json
scripts/: freeze_claims.py  render_paper_assets.py  reproduce_all.py  validate_final_state.py
tests/: test_accounting.py  test_discovery.py  test_endomap.py  test_final_state.py  test_freeze_claims.py  test_gate_discovery.py  test_gate_phase_diagram.py  test_gates.py  test_generator.py  test_import.py  test_lens.py  test_markov.py  test_metrics.py  test_parity_robustness.py  test_reproduce_all.py  test_reversible_vs_erased.py  test_sweep.py
(+37 files in other folders)
