[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "build_backend"
backend-path = ["."]

[project]
name = "emergent-logic"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "scipy",
  "pandas",
  "networkx",
  "matplotlib",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
